Thu May  3 22:05:40 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c: copied rdocs from fastthread.

Thu May  3 18:10:12 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_evalbody.ci, insns.def, vm.c, tool/insns2vm.rb (rb_num_t):
	  renamed to get rid of name clash.  [ruby-dev:30504]

	* yarvcore.c (ruby_thread_init): ditto.

Wed May  2 18:52:58 2007  Koichi Sasada  <ko1@atdot.net>

	* vm.c, yarvcore.h, yarvcore.c, insns.def: fix to mark VM stack
	  in correct range.

Wed May  2 17:13:26 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_quo): now calculate in integer.  [ruby-dev:30753]

Wed May  2 15:14:56 2007  Koichi Sasada  <ko1@atdot.net>

	* eval_method.h: add redefine checks ([ruby-dev:30751]).

Wed May  2 11:22:52 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: use Qtrue instead of 2.

	* vm.c, insns.def: support "lambda" calling convention.

Wed May  2 06:46:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c, parse.y, ruby.h (rb_compile_warn, rb_compile_warning): warn
	  for compilation.  the parser should no longer use rb_warn() and
	  rb_warning().  [ruby-dev:30121]

Wed May  2 05:45:21 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assoc): result of assoc_new needs to be an assoc.

Wed May  2 05:40:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_pow): improvement by calculating from MSB and using
	  factorization.  <http://yowaken.dip.jp/tdiary/20070426.html#p01>

Tue May  1 18:45:45 2007  Koichi Sasada  <ko1@atdot.net>

	* sample/test.rb: import matzruby's sample/test.rb.

Tue May  1 17:46:05 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_choice): a new method to choose an element
	  randomly from an array.

	* array.c (rb_ary_choice): fixed mistake from RDoc.

Tue May  1 13:59:18 2007  Koichi Sasada  <ko1@atdot.net>

	* proc.c (proc_arity): fix an arity bug ([ruby-core:11060]).

Tue May  1 13:12:49 2007  Koichi Sasada  <ko1@atdot.net>
